plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

repositories {
    mavenCentral()
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    implementation 'org.openjfx:javafx-controls:17.0.6'
    implementation 'org.openjfx:javafx-fxml:17.0.6'
    implementation files('libs/jnetpcap-1.4.r1425/jnetpcap.jar')
}

application {
    mainModule = 'com.yourpackage' // Make sure this matches your module name
    mainClass = 'com.yourpackage.Main' // Use the full path to your main class
}

javafx {
    version = "17.0.6"
    modules = ['javafx.controls', 'javafx.fxml']
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'Dorothy'
    }
    jpackage {
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += ["-Xlint:unchecked", "-Xlint:deprecation", "--add-modules", "javafx.controls,javafx.fxml,jnetpcap"]
}

run {
    jvmArgs = [
        '-Djava.library.path=C:\\Users\\samue\\Desktop\\Leeroy\\native',
        '--add-modules=jnetpcap'
    ]
}

task copyNativeLibs(type: Copy) {
    from 'src/main/cpp'
    into 'native'
    include '*.dll'
}

run.dependsOn copyNativeLibs

tasks.withType(JavaExec) {
    jvmArgs = ['-Djava.library.path=C:\\Users\\samue\\Desktop\\Leeroy\\native']
}